[tool.poetry]
name = "lanarky"
version = "0.7.17"
description = "The web framework for building LLM microservices"
authors = ["Ajinkya Indulkar <ajndkr@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ajndkr/lanarky"
repository = "https://github.com/ajndkr/lanarky"
license = "MIT"
packages = [{include = "lanarky"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.97.0"
pydantic = ">=1,<3"
sse-starlette = "^1.6.5"
loguru = "^0.7.2"
openai = {version = "^1", optional = true}
tiktoken = {version = "^0.4.0", optional = true}
langchain = {version = "^0.0.337", optional = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipykernel = "^6.26.0"
pyclean = "^2.7.5"
uvicorn = {extras = ["standard"], version = "<1"}

[tool.poetry.group.tests.dependencies]
httpx-sse = "^0.3.1"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
coveralls = "^3.3.1"

[tool.poetry.extras]
langchain = ["langchain"]
openai = ["openai", "tiktoken"]
redis = ["redis"]
gptcache = ["gptcache"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
