[tool.poetry]
name = "lanarky"
version = "0.8.3"
description = "The web framework for building LLM microservices"
authors = ["Ajinkya Indulkar <ajndkr@gmail.com>"]
readme = "README.pypi.md"
homepage = "https://lanarky.ajndkr.com/"
repository = "https://github.com/ajndkr/lanarky"
documentation = "https://lanarky.ajndkr.com/"
license = "MIT"
packages = [{include = "lanarky"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = ">=0.97.0"
pydantic = ">=1,<3"
sse-starlette = "^1.6.5"
loguru = "^0.7.2"
httpx-sse = "^0.3.1"
websockets = "<12.0"
openai = {version = "^1", optional = true}
tiktoken = {version = "^0.4.0", optional = true}
langchain = {version = "^0.0.337", optional = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipykernel = "^6.26.0"
pyclean = "^2.7.5"
uvicorn = {extras = ["standard"], version = "<1"}

[tool.poetry.group.tests.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
coveralls = "^3.3.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = {extras = ["imaging"], version = "^9.4.14"}
mdx-include = "^1.4.2"
termynal = "^0.11.1"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.group.examples.dependencies]
faiss-cpu = "^1.7.4"
gradio = "^4.7.1"

[tool.poetry.extras]
openai = ["openai", "tiktoken"]
langchain = ["langchain"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
